styled format for all the pages

--- a/views/new_contact.erb
+++ b/views/new_contact.erb
@@ -1,9 +1,22 @@
 <h1>Create new Contact</h1>
 
 <form action='/contacts' method='post'>
-  <input type='text' name='first_name'>
-  <input type='text' name='last_name'>
-  <input type='text' name='email'>
-  <input type='text' name='note'>
-  <input type='submit' value='New Contact'>
+
+	<div class = 'content'>
+		<div class = 'text'>
+
+			<ul><input type='text' id ='first_name' name='first_name' placeholder='first name'></ul>
+			<ul><input type='text' id = 'last_name' name='last_name' placeholder='last name'></ul>
+			<ul><input type='text' id = 'email' name='email' placeholder='email'></ul>
+			<ul><input type='text' id = 'note' name='note' placeholder='note'></ul>
+
+			<input type='submit' value='New Contact'>
+			
+		</div>			
+
+
+	</div>
+
+
+
 </form>
