--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -1,8 +1,11 @@
 <h1>All Contacts</h1>
+<div class = 'listed_contact'>
+	<ol>
+		<% Contact.all.each do |contact| %>
+	  <li><%= contact.first_name %> 
+	  <%= contact.last_name %></li>
+	<% end %>
+	</ol>
+</div>
 
-<ul>
-	<% Contact.all.each do |contact| %>
-  <li><%= contact.first_name %> 
-  <%= contact.last_name %></li>
-<% end %>
-</ul>
+<a href="/">Return to main</a>
