--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,8 @@
 <h1>Welcome to <%= @crm_app_name %>!</h1>
-<p>Main menu</p>
-<ul>
-  <li><a href="/contacts">View all contacts</a></li>
-  <li><a href="/contacts/new">New contacts</a></li>
-  <!-- please complete me with links to other actions -->
-</ul>
+<div class = 'main_links'>
+	<ul>
+	  <li><a href="/contacts">View all contacts</a></li>
+	  <li><a href="/contacts/new">New contacts</a></li>
+	  <!-- please complete me with links to other actions -->
+	</ul>
+</div>
