--- a/public/style.css
+++ b/public/style.css
@@ -32,15 +32,32 @@ li {
 
 
 input[type=text] {
-    background-color: lightblue;
+    background-color: black;
     border: 3px solid #555;
     border-radius: 5px;
     margin: 3px;
+    text-decoration-color: white;
+    color:white;
 }
+input[type=submit] {
+    margin: 3px;
+}
+
 h1 {
 	text-align: center;
     color:black;
 }
+
+th, td {
+    padding: 5px;
+    text-align: left;
+}
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+
 .main_links { }
 .main_links ul { list-style:none; text-align:center; border-top:1px solid #eee; border-bottom:1px solid #eee; padding:10px 0; }
 .main_links ul li { display:inline; text-transform:uppercase; padding:0 10px; letter-spacing:10px; }
