--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -1,11 +1,38 @@
 <h1>All Contacts</h1>
 <div class = 'listed_contact'>
-	<ol>
-		<% Contact.all.each do |contact| %>
-	  <li><%= contact.first_name %> 
-	  <%= contact.last_name %></li>
-	<% end %>
-	</ol>
+	<table style = 'width:70%'>
+		<tr>
+		    <th>First Name</th>
+		    <th>Last Name</th>
+		    <th>email</th>
+		    <th>note</th>
+		</tr>
+
+		<tr>
+			<% Contact.all.each do |contact| %>
+		  <th><%= contact.first_name %> </th>
+		  <th><%= contact.last_name %></th>
+		  <th><%= contact.email %></th>
+		  <th><%= contact.note %></th>
+
+		  <th>
+		  	<botton type = 'submit'> 
+		  		<img src="https://cdn1.iconfinder.com/data/icons/turbo-outline/50/Edit-128.png" width="20px"/>
+		  	</botton>
+		  </th>
+
+		  <th>
+		  	<botton type = 'submit'> 
+		  		<img src="http://icons.iconarchive.com/icons/visualpharm/must-have/256/Delete-icon.png" alt="delete" height="20px" width="20px"/>
+		  	</botton>
+		  </th>
+
+		  </tr>
+		<% end %>
+		
+	</table>
+
+
 </div>
 
 <a href="/">Return to main</a>
