--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,14 @@
 <h1>Welcome to <%= @crm_app_name %>!</h1>
 <div class = 'main_links'>
+	<header class = "mainHeader">
 	<ul>
 	  <li><a href="/contacts">View all contacts</a></li>
 	  <li><a href="/contacts/new">New contacts</a></li>
 	  <!-- please complete me with links to other actions -->
 	</ul>
+	</header>
+
+	<footer class = "mainFooter">
+		<p> Copyright &copy; 2016 <a href="#" title= "contacts"> example.com</a> By: Mitchell Demers</p>
+	</footer>
 </div>
